Modified about us section

--- a/index.html
+++ b/index.html
@@ -40,28 +40,28 @@
 
     <div class="about">
         <h1>About Us</h1>
-        <p>Glorious is a company that focuses on manufacturing formal wear that fits in almost all occasions. We offer
-            various kinds of formal dresses from black tie, formal, semi-formal, festive, casual to tropical attire we've got you covered!
-            You can choose the best fit that suits you. We guarantee our every customer that they get to wear 
-            not only the most comfortable outfit but elegant as well.Get yours now!
+        <p>Glorious is a company that specializes in creating formal wear for almost any occasion.
+            We have a wide range of formal dresses available, including black tie, formal, semi-formal, festive, casual, and tropical attire.
+            You can select the best fit for you. We guarantee that every customer will be able to wear
+            not only the most comfortable outfit, but also the most elegant. Get yours now!
         </p>
     </div>
 
     <div class="row">
         <div class="about-col">
-            <h3>Heading 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi neque nulla, fringilla sit amet turpis ut, egestas ornare est. Proin lobortis laoreet nunc ac mattis. Nullam tristique convallis quam non pulvinar.</p>
+            <h3>We are the world's leading luxury brand</h3>
+            <p>Glorious is widely recognized by many celebrities and high-profile individuals as the best clothing brand ever!</p>
         </div>
         <div class="about-col">
-            <h3>Heading 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi neque nulla, fringilla sit amet turpis ut, egestas ornare est. Proin lobortis laoreet nunc ac mattis. Nullam tristique convallis quam non pulvinar.</p>
+            <h3>Choose your style</h3>
+            <p>We have tons of different styles that you can choose from. You don't have to worry about running out of ideas for your outfit.</p>
         </div>
         <div class="about-col">
-            <h3>Heading 3</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi neque nulla, fringilla sit amet turpis ut, egestas ornare est. Proin lobortis laoreet nunc ac mattis. Nullam tristique convallis quam non pulvinar.</p>
+            <h3>High-quality products</h3>
+            <p>We guarantee you that you get the best-quality of outfit in every possible way. Thus, we made sure that we only use excellent materials needed in making our products.</p>
         </div>
     </div>
-
+    
 
 
     <!--Products Section-->
