Created products homepage

--- a/index.html
+++ b/index.html
@@ -66,11 +66,31 @@
 
     <!--Products Section-->
     <div class="products">
+        <h1>Our Products</h1>
+        <p>Here are the products we offer</p>
+
+        <div class="row">
+            <div class="products-col">
+                <img src="images/suit1.jpg">
+                <div class="layer">
+                    <h3>SUITS</h3>
+                </div>
+            </div>
+            <div class="products-col">
+                <img src="images/pants1.jpg">
+                <div class="layer">
+                    <h3>PANTS</h3>
+                </div>
+            </div>
+            <div class="products-col">
+                <img src="images/accessories1.jpg">
+                <div class="layer">
+                    <h3>ACCESSORIES</h3>
+                </div>
+            </div>
+        </div>
 
 
-
-
-        
     </div>
 
 
